fixed issues around scrolling and screen offset. fixed issue preventing workarea from being seen completely when on overflow. added zoom tool keyboard shortcut added scroll values and reducers to store added zoom tool!!!

--- a/src/components/Workarea/styles.scss
+++ b/src/components/Workarea/styles.scss
@@ -3,6 +3,7 @@
     overflow: auto;
     & > *{
         flex:0 0 auto;
+        margin: auto;
     }
 }
 .box .input-logger{
